# popgetter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Cargo.toml  Dockerfile  README.md  deploy.sh  france.py  mkdocs.yml  pyproject.toml  refresh_dev_deployment.py  schema.json  setup-metadata.sh  test_recipe.json
.github/workflows/: cd.yml  ci.yml  publish.yml  python.yml  release-plz.yml  rust.yml
docs/: deployment.md  index.md
popgetter/: Cargo.toml
popgetter-cli/: CHANGELOG.md  Cargo.toml  README.md
popgetter-cli/src/: cli.rs  display.rs  error.rs  main.rs
popgetter-core/: CHANGELOG.md  Cargo.toml  README.md
popgetter-core/src/: column_names.rs  config.rs  data_request_spec.rs  error.rs  formatters.rs  lib.rs  metadata.rs
popgetter-llm/: CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml
popgetter-llm/src/: chain.rs  embedding.rs  error.rs  lib.rs  main.rs  utils.rs
popgetter-py/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
popgetter-py/notebooks/: README.md  census_to_hexgrid_with_popgetter.ipynb  requirements.txt
popgetter-py/src/: lib.rs
popgetter/src/: cli.rs  data_request_spec.rs  display.rs  formatters.rs  geo.rs  lib.rs  metadata.rs  parquet.rs  search.rs  transform.rs
popgetter_cli/: Cargo.toml
popgetter_cli/src/: cli.rs  display.rs  error.rs  lib.rs  main.rs
popgetter_py/: Cargo.toml  README.md
popgetter_py/.github/workflows/: CI.yml
popgetter_py/src/: lib.rs
popgetter_wasm/: Cargo.toml
popgetter_wasm/src/: lib.rs
python/popgetter/: __init__.py  cloud_outputs.py  env.py  metadata.py  run.py  run_job.py  utils.py
python/popgetter/assets/: __init__.py
python/popgetter/assets/gb_nir/: __init__.py
python/popgetter/assets/gb_sct/: __init__.py
python/popgetter/assets/scotland/: __init__.py  scotland.py
python/popgetter/assets/uk/: __init__.py  england_wales_census.py
python/popgetter/assets/us/: __init__.py  config.py
python/popgetter/assets/usa/: __init__.py  census_tasks.py  config.py
python/popgetter/cloud_outputs/: __init__.py  sensor_class.py
python/popgetter/io_managers/: __init__.py  azure.py  local.py
schema/: popgetter_0.1.0.json
src/: cli.rs  config.rs  data_request_spec.rs  display.rs  error.rs  formatters.rs  geo.rs  getter.rs  lib.rs  main.rs  metadata.rs  ni.rs  parquet.rs  search.rs  uk.rs
tests/: test_cloud_outputs.py
uk/: scotland.py
