[package]
name = "popgetter_cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "popgetter"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version="1.0"}
tokio = { version = "1.30.0", features = ["full"] }
clap = { version = "4.5.0", features = ["derive"] }
polars = {version ="0.39.2", features = ["lazy","is_in","http","streaming", "parquet","polars-io","regex","strings","rows"]}
typify = "0.0.16"
chrono = {version="0.4.37", features=['serde']}
reqwest = {version = "0.12.3", features = ["json"]}
strum = "0.26"
strum_macros = "0.26"
enum_dispatch = "0.3"
flatgeobuf = "~4.1.0"
geozero = {version = "0.12.0", features= ["with-csv","with-geojson"]} 
httpmock = "0.7.0-rc.1"
geojson={version="0.24.1", optional=true }
geo = "0.28.0"
wkt = "0.10.3"
wkb = "0.7.1"
log = "0.4.21"
pretty_env_logger = "0.5.0"
futures = "0.3.30"
toml = "0.8.13"
xdg = "2.5.2"
regex = "1.10.4"
thiserror = "1"


[features]
default = ["formatters"]
formatters= ["dep:geojson"]
