[workspace]
members = ["popgetter-core", "popgetter-llm", "popgetter-cli", "popgetter-py"]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.75"
chrono = "0.4.37"
clap = "4.5.0"
comfy-table = "7.1.1"
dirs = "5"
enum_dispatch = "0.3"
flatgeobuf = "~4.1.0"
futures = "0.3.30"
geo = "0.28.0"
geojson = "0.24.1"
geozero = "0.12.0"
httpmock = "0.7.0-rc.1"
itertools = "0.13.0"
log = "0.4.21"
nonempty = "0.10.0"
polars = "0.42.0"
pretty_env_logger = "0.5.0"
pyo3 = "0.22.0"
pyo3-polars = "0.16.0"
regex = "1.10.4"
reqwest = "0.12.3"
serde = "1.0"
serde_json = "1.0"
spinners = "4.1.1"
strum = "0.26"
strum_macros = "0.26.4"
tempfile = "3.12"
thiserror = "1"
tokio = "1.38.0"
toml = "0.8.13"
wkb = "0.7.1"
wkt = "0.10.3"
indoc = "2.0.5"
langchain-rust = "4.6.0"
rand = "0.8.5"
qdrant-client = "1.12.1"
tiktoken-rs = "0.6.0"
