[package]
name = "popgetter-cli"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "CLI for popgetter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "popgetter"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
comfy-table = { workspace = true }
dirs = { workspace = true }
enum_dispatch = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
nonempty = { workspace = true, features = ["serialize"] }
polars = { workspace = true, features = ["lazy", "is_in", "http", "streaming", "parquet", "polars-io", "regex", "strings", "rows"] }
popgetter-core = { path = "../popgetter-core", version = "0.2.0" }
pretty_env_logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
spinners = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
