[package]
name = "popgetter-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
itertools.workspace = true
langchain-rust = { workspace = true, features = ["qdrant", "qdrant-client"] }
pretty_env_logger.workspace = true
polars.workspace = true
popgetter = { path = "../popgetter" }
rand = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
log.workspace = true
indoc = { workspace = true }
