[package]
name = "popgetter-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
itertools.workspace = true
langchain-rust = { workspace = true, features = ["qdrant", "qdrant-client"] }
pretty_env_logger.workspace = true
polars = { workspace = true, features = ["json"] }
popgetter = { path = "../popgetter" }
popgetter_cli = { path = "../popgetter_cli" }
rand = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
log.workspace = true
indoc = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tiktoken-rs = "0.6.0"
qdrant-client = "1.12.1"
