[package]
name = "popgetter-llm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "LLM integration for popgetter"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
indoc = { workspace = true }
itertools = { workspace = true }
langchain-rust = { workspace = true, features = ["qdrant", "qdrant-client"] }
log = { workspace = true }
polars = { workspace = true, features = ["json"] }
popgetter-core = { path = "../popgetter-core", version = "0.2.2" }
pretty_env_logger = { workspace = true }
qdrant-client = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tiktoken-rs = { workspace = true }
tokio = { workspace = true }
