[package]
name = "popgetter-py"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Python bindings for popgetter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "popgetter"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
polars = { workspace = true, features = ["lazy", "is_in", "http", "streaming", "parquet", "polars-io", "regex", "strings", "rows"] }
popgetter-core = { path = "../popgetter-core", version = "0.2.0"}
pyo3 = { workspace = true, features = ["anyhow", "experimental-async"] }
pyo3-polars ={ workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
