[package]
name = "popgetter"
version = "0.2.0"
edition = "2021"

[lib]
name = "popgetter"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.37", features = ['serde'] }
comfy-table = "7.1.1"
enum_dispatch = "0.3"
flatgeobuf = "~4.1.0"
futures = "0.3.30"
geo = "0.28.0"
geojson = { version = "0.24.1", optional = true }
geozero = { version = "0.12.0", features = ["with-csv", "with-geojson"] }
itertools = "0.13.0"
log = "0.4.21"
nonempty = { version = "0.10.0", features = ["serialize"] }
polars = { version = "0.40.0", features = [
    "lazy",
    "is_in",
    "http",
    "streaming",
    "parquet",
    "polars-io",
    "regex",
    "strings",
    "rows",
] }
regex = "1.10.4"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.30.0", features = ["full"] }
thiserror = "1"
wkb = "0.7.1"
wkt = "0.10.3"

[dev-dependencies]
httpmock = "0.7.0-rc.1"
tempfile = "3.12"

[features]
default = ["cache", "formatters"]
cache = []
formatters = ["dep:geojson"]
