[package]
name = "popgetter_cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "popgetter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.30.0", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5.0", features = ["derive"] }
polars = { git = "https://github.com/Urban-Analytics-Technology-Platform/polars.git", branch = "parquet-wasm", features = [
    "lazy",
    "is_in",
    "http",
    "streaming",
    "parquet",
    "polars-io",
    "regex",
    "strings",
    "rows",
] }
enum_dispatch = "0.3"
toml = "0.8.13"
popgetter = { path = "../popgetter", features = ["formatters", "not_wasm"]}
comfy-table = "7.1.1"
itertools = "0.13.0"
strum_macros = "0.26.4"
xdg = "2.5.2"
log = "0.4.21"
pretty_env_logger = "0.5.0"
strum = "0.26"
spinners = "4.1.1"
nonempty = { version = "0.10.0", features = ["serialize"] }
