[package]
name = "popgetter_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "popgetter_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "^0.21.0"
pyo3-polars="0.14.0"
popgetter= {path="../popgetter"}
