[package]
name = "popgetter_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "popgetter"
crate-type = ["cdylib"]

[dependencies]
polars = { workspace = true, features = ["lazy", "is_in", "http", "streaming", "parquet", "polars-io", "regex", "strings", "rows"] }
popgetter = { path = "../popgetter" }
pyo3 = { workspace = true, features = ["experimental-async"] }
pyo3-polars ={ workspace = true }
tokio = { workspace = true }
